# TestDrivenProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_pipeline.yml  c-cpp.yml
executables/: b_push.bat
ind/: b_push.bat
ind/sanitizer/: CMakeLists.txt  git_diff.txt  sanityLog.txt
ind/sanitizer/main/: Unittest.cpp
ind/sanitizer/src/: ind_sanitizer_historysanitizer.cpp
ind/sanitizer/src/config/: config.h  config.h.in
ind/sanitizer/src/include/: ind_sanitizer_historysanitizer.hpp  ind_sanitizer_isanitizer.hpp
ind/sanitizer/test/historysanitizerunittest/: SampleDiffInvalid.txt  SampleDiffValid.txt  ind_historysanitizer_historysanitizerunittest.cpp
ind/sanitizer/test/historysanitizerunittest/include/: ind_historysanitizer_mockhistorysanitizer.hpp
src/dbclient/: tdd_dbclient_dbconnector.hpp
src/dbclient/include/: tdd_dbclient_idbclient.hpp
src/lexer/: tdd_lexer_lexerclient.cpp
src/lexer/include/: tdd_lexer_SyntaxToken.hpp  tdd_lexer_ilexer.hpp  tdd_lexer_lexerclient.hpp
src/main/: GoogleTestClone.cpp  custom_compiler_main.cpp
src/parser/: tdd_parser_parserclient.cpp
src/parser/include/: tdd_parser_iparser.hpp  tdd_parser_parserclient.hpp
src/printer/: tdd_printer_printerclient.cpp
src/printer/include/: tdd_printer_iprinter.hpp  tdd_printer_printerclient.hpp
src/syntaxnode/include/: tdd_syntaxnode_BinaryExpressionSyntaxNode.hpp  tdd_syntaxnode_ExpressionSyntaxNode.hpp  tdd_syntaxnode_NumberExpressionSyntaxNode.hpp  tdd_syntaxnode_SyntaxToken.hpp
src/utils/comparators/include/: tdd_utils_comparator_comparatorutils.hpp
test/: CMakeLists.txt
test/src/dbclienttest/: tdd_dbclient_dbclienttest.cpp
test/src/lexer/: tdd_lexer_lexerunittest.cpp
test/src/lexer/include/: tdd_lexer_lexerclientmock.hpp
test/src/lexerunittest/: tdd_lexer_lexerunittest.cpp
test/src/lexerunittest/include/: tdd_lexertest_lexerclientmock.hpp
test/src/main/: Unittest.cpp
test/src/parser/: tdd_parser_parserunittest.cpp
test/src/parser/include/: tdd_parser_parserclientmock.hpp
test/src/parserunittest/: tdd_parser_parserunittest.cpp
test/src/parserunittest/include/: tdd_parser_parserclientmock.hpp
test/src/printerunittest/: tdd_printer_printerclientmock.cpp  tdd_printer_printerclientunittes.cpp
test/src/printerunittest/include/: tdd_printer_printerclientmock.hpp
